cluster-services/longhorn/bluey/patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-recovery-backend
  namespace: longhorn-system
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-conversion-webhook
  namespace: longhorn-system
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: longhorn-admission-webhook
  namespace: longhorn-system
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
  namespace: longhorn-system
spec:
  template:
    spec:
      containers:
        - name: longhorn-driver-deployer
